--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <title>Skip To My Lou</title>
     </head>
     <body>
+        <div id="root"></div>
         <script type="module" src="./App.jsx"></script>
     </body>
 </html>
