--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
     <head>
         <title>Skip To My Lou</title>
+        <link rel="stylesheet" href="./css/style.css">
     </head>
     <body>
         <div id="root"></div>
